[gd_scene load_steps=27 format=3 uid="uid://37imqsc4fgyq"]

[ext_resource type="Script" path="res://data/systemPrograms/Script/WindowManager.gd" id="1_k64ra"]
[ext_resource type="FontFile" uid="uid://dp1gye0glppu1" path="res://data/font/OpenSans-VariableFont_wdth,wght.ttf" id="2_ia1py"]
[ext_resource type="Texture2D" uid="uid://b23hckwv72feg" path="res://data/image/ram.png" id="3_7am6t"]
[ext_resource type="FontFile" uid="uid://bladlchox5e3y" path="res://data/font/OpenSans-Italic-VariableFont_wdth,wght.ttf" id="4_peue5"]
[ext_resource type="Texture2D" uid="uid://dlvqihkb7gw6s" path="res://data/image/rem.png" id="5_wnpdp"]
[ext_resource type="PackedScene" uid="uid://d1o4olrb2p3h2" path="res://data/systemPrograms/Terminal.tscn" id="6_d6xwl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1kqq"]
bg_color = Color(0.141176, 0, 0.27451, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nmrvo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6wab"]
bg_color = Color(0.141176, 0, 0.27451, 1)
corner_radius_top_left = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8i5hd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jkxvs"]
texture = ExtResource("3_7am6t")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lavbe"]
bg_color = Color(0.235294, 0.0352941, 0.423529, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mgp5i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kxsnn"]
bg_color = Color(0.352941, 0.0941176, 0.603922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x7beq"]
bg_color = Color(0.352941, 0.0941176, 0.603922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpc2u"]
bg_color = Color(0.156863, 0.0235294, 0.286275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r74dg"]
bg_color = Color(0.235294, 0.0352941, 0.423529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8k63r"]
bg_color = Color(0.141176, 0, 0.27451, 1)
anti_aliasing = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xsiym"]
texture = ExtResource("5_wnpdp")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gwq7m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sp3p7"]
bg_color = Color(0.141176, 0, 0.27451, 1)
corner_radius_top_right = 3
corner_radius_bottom_right = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fnajx"]
bg_color = Color(0.352941, 0.0941176, 0.603922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bbssk"]
bg_color = Color(0.235294, 0.0352941, 0.423529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uw7oe"]
bg_color = Color(0.360784, 0.109804, 0.603922, 1)
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3pckr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2f3y"]
bg_color = Color(0.0235294, 0, 0.0705882, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.352941, 0.0941176, 0.603922, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 2

[node name="WindowManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k64ra")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s1kqq")
metadata/_edit_lock_ = true

[node name="topBG" type="Panel" parent="."]
custom_minimum_size = Vector2(1133.74, 30)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 9.155
offset_top = 6.19
offset_right = -9.09998
offset_bottom = 29.03
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_nmrvo")
metadata/_edit_lock_ = true

[node name="tophbox" type="HBoxContainer" parent="topBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
metadata/_edit_lock_ = true

[node name="leftRem" type="Panel" parent="topBG/tophbox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q6wab")

[node name="HBoxContainer" type="HBoxContainer" parent="topBG/tophbox/leftRem"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="leftt" type="Label" parent="topBG/tophbox/leftRem/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ia1py")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_8i5hd")
text = "  :   "

[node name="leftt2" type="Panel" parent="topBG/tophbox/leftRem/HBoxContainer"]
custom_minimum_size = Vector2(27, 28.38)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_jkxvs")

[node name="leftLayer" type="Panel" parent="topBG/tophbox"]
custom_minimum_size = Vector2(146.31, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lavbe")

[node name="şayerhbox" type="HBoxContainer" parent="topBG/tophbox/leftLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="sep2" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="br4" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_peue5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mgp5i")
text = "|"

[node name="1" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_peue5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mgp5i")
text = "1"

[node name="br" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_peue5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mgp5i")
text = " \\ "

[node name="2" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_peue5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mgp5i")
text = "2"

[node name="br2" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_peue5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mgp5i")
text = " \\ "

[node name="3" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_peue5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mgp5i")
text = "3"

[node name="br3" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_peue5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mgp5i")
text = " \\ "

[node name="4" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_peue5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mgp5i")
text = "4"

[node name="br5" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_peue5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mgp5i")
text = "|"

[node name="sep" type="Label" parent="topBG/tophbox/leftLayer/şayerhbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="sepScale" type="Panel" parent="topBG/tophbox"]
custom_minimum_size = Vector2(29.415, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kxsnn")

[node name="sep" type="Panel" parent="topBG/tophbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_x7beq")

[node name="middle" type="Panel" parent="topBG/tophbox"]
custom_minimum_size = Vector2(186.435, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dpc2u")

[node name="label" type="Label" parent="topBG/tophbox/middle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "(-Gnu/Linux's My Life-)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sep2" type="Panel" parent="topBG/tophbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_x7beq")

[node name="rightPanel" type="Panel" parent="topBG/tophbox"]
custom_minimum_size = Vector2(175.7, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r74dg")

[node name="leftRem2" type="Panel" parent="topBG/tophbox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8k63r")

[node name="HBoxContainer" type="HBoxContainer" parent="topBG/tophbox/leftRem2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="leftt3" type="Panel" parent="topBG/tophbox/leftRem2/HBoxContainer"]
custom_minimum_size = Vector2(27, 28.38)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_xsiym")

[node name="leftt" type="Label" parent="topBG/tophbox/leftRem2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ia1py")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_gwq7m")
text = "   :  "

[node name="bottomBG" type="Panel" parent="."]
custom_minimum_size = Vector2(1133.74, 30)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 9.155
offset_top = 608.19
offset_right = -9.09998
offset_bottom = 638.19
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_nmrvo")
metadata/_edit_lock_ = true

[node name="bottonhbox" type="HBoxContainer" parent="bottomBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
metadata/_edit_lock_ = true

[node name="leftt3" type="Label" parent="bottomBG/bottonhbox"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_ia1py")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_sp3p7")
text = "  :   "

[node name="sep" type="Panel" parent="bottomBG/bottonhbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_fnajx")

[node name="middleSystem" type="Label" parent="bottomBG/bottonhbox"]
custom_minimum_size = Vector2(343.43, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_bbssk")

[node name="sep2" type="Panel" parent="bottomBG/bottonhbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_uw7oe")

[node name="leftt4" type="Label" parent="bottomBG/bottonhbox"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_ia1py")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_sp3p7")
text = "  :   "

[node name="system" type="Panel" parent="."]
custom_minimum_size = Vector2(270.15, 415.91)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -255.955
offset_right = 288.15
offset_bottom = 159.955
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_3pckr")
metadata/_edit_lock_ = true

[node name="systemInfo" type="TextEdit" parent="system"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/caret_color = Color(0.992157, 0.992157, 0.992157, 1)
theme_override_fonts/font = ExtResource("2_ia1py")
theme_override_font_sizes/font_size = 15
theme_override_styles/read_only = SubResource("StyleBoxFlat_q2f3y")
placeholder_text = "this info text"
editable = false

[node name="programs" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="terminal" parent="programs" instance=ExtResource("6_d6xwl")]
position = Vector2i(0, 36)
visible = false

[connection signal="close_requested" from="programs/terminal" to="." method="_on_window_close_requested"]
